lab8/tests/error/classwork.py
import statistics107
statistics107.every_other([1, 2, 3, 4, 5, 6])
